# robot-ui-control

./: .gitignore  package-lock.json  package.json
control_ros_bridge/src/dummy_robot/: CMakeLists.txt  package.xml
control_ros_bridge/src/dummy_robot/src/: dummy_odom.cpp
control_ros_bridge/src/slam_web_bridge/: CMakeLists.txt  package.xml
control_ros_bridge/src/slam_web_bridge/src/: bridge_node.cpp
electron/: main.js
frontend/src/: App.jsx  index.css
frontend/src/viewer/: PointCloudManager.js  RobotManager.js  SceneManager.js  Viewer.jsx
